--- a/1. Build a survey form/Style.css
+++ b/1. Build a survey form/Style.css
@@ -1,16 +1,12 @@
-
-
 h1 {
   margin-top: 2em;
   margin-bottom: 0;
-  text-align: center;
   font-weight: normal;
 }
 
 p {
   margin-top: 0.5em;
   margin-bottom: 1.25em;
-  text-align: center;
   font-style: italic;
   font-weight: lighter;
   font-size: 0.9em;
@@ -19,6 +15,11 @@ p {
 h1, p {
   color: white;
   font-family: 'Helvetica';
+  text-align: center;
+  min-width: 500px;
+  max-width: 700px;
+  margin-left: 30%;
+  margin-right: 30%;
   
 }
 
@@ -32,17 +33,21 @@ body {
 form {
   color: white;
   font-family: 'Helvetica';
+  font-size: 1.25em;
+  min-width: 500px;
+  max-width: 700px;
   background-color: rgba(20, 20, 75, 0.8);
   margin-top: 0.25em;
   border-radius: 7px;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
 select, input, textarea {
   margin: 0.5em 0 1.5em 0;
   width: 100%;
   min-height: 2em;
+  font-size: 0.85em;
 }
 
 .block {
